created endpoint to create simple and multiple bets